bbdb3 (3.2-8) UNRELEASED; urgency=low

  * Bump debhelper from old 12 to 13.
  * Set upstream metadata fields: Repository, Repository-Browse.
  * Update standards version to 4.5.0, no changes needed.

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 08 Jun 2020 15:37:13 -0000

bbdb3 (3.2-7) unstable; urgency=medium

  * track upstream mods through 01-Jan-2020
  * Use secure URI in Homepage field.
  * debian/copyright: use spaces rather than tabs to start continuation
    lines.
  * Update standards version to 4.4.1, no changes needed.
  * Rules-Requires-Root: no

 -- Barak A. Pearlmutter <bap@debian.org>  Thu, 02 Jan 2020 13:23:40 +0000

bbdb3 (3.2-6) unstable; urgency=medium

  * bump policy version
  * bump to debhelper 12
  * use upstream tags in git-buildpackage

 -- Barak A. Pearlmutter <bap@debian.org>  Tue, 06 Aug 2019 08:39:54 +0200

bbdb3 (3.2-5) unstable; urgency=medium

  * track upstream mods (wanderlust fixes)
  * enhances: wanderlust
  * add pointers to relevant documentation in debian/NOTES.org, installed as doc
  * bump standards version

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 08 Oct 2018 17:15:06 +0100

bbdb3 (3.2-4) unstable; urgency=medium

  * track upstream mods

 -- Barak A. Pearlmutter <bap@debian.org>  Tue, 12 Jun 2018 11:19:34 +0100

bbdb3 (3.2-3) unstable; urgency=medium

  * track upstream mods
  * swizzle packaging repo to salsa
  * bump policy version
  * bump to dh11

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 16 Apr 2018 23:03:00 +0100

bbdb3 (3.2-2) unstable; urgency=medium

  * track upstream mods
  * use secure copyright format url
  * update package description per current upstream README

 -- Barak A. Pearlmutter <bap@debian.org>  Sun, 18 Mar 2018 21:37:49 +0000

bbdb3 (3.2-1) unstable; urgency=medium

  * new upstream release
  * update debian/copyright to upstream rm tex/*.tex
  * secure URL in debian/watch
  * remove unused lintian override regarding lisp/makefile-temp
