@@ -3,7 +3,6 @@ Section: mail
 Priority: optional
 Maintainer: Barak A. Pearlmutter <bap@debian.org>
 Build-Depends: debhelper-compat (= 13),
-	       texinfo, texlive,
 	       emacs | emacs26-nox | emacs26 | emacs25-nox | emacs25 | emacs24-nox | emacs24
 Standards-Version: 4.5.0
 Rules-Requires-Root: no
