@@ -3,8 +3,9 @@ bbdb3 (3.2-8) UNRELEASED; urgency=low
   * Bump debhelper from old 12 to 13.
   * Set upstream metadata fields: Repository, Repository-Browse.
   * Update standards version to 4.5.0, no changes needed.
+  * Merge & activate upstream config option to disable texi documentation
 
- -- Barak A. Pearlmutter <bap@debian.org>  Mon, 08 Jun 2020 15:37:13 -0000
+ -- Barak A. Pearlmutter <bap@debian.org>  Thu, 20 Aug 2020 13:12:15 +0100
 
 bbdb3 (3.2-7) unstable; urgency=medium
 
